--- a/index.html
+++ b/index.html
@@ -34,19 +34,24 @@
             <p>Subscribe</p>
         </div>
         <h4>Radio buttons</h4>
-       <div class="radio">
-
-       <label>Gender:</label>
-
-    <input id="male" type="radio" name="gender" value="male">
-
-    <label for="male" class="label-one">Male</label>
-
-    <input id="female" type="radio" name="gender" value="female">
-
-    <label for="female" class="label-one">Female</label>
-
-</div>
-
+        <div class="radio">
+            <label>Gender:</label>
+            <input id="male" type="radio" name="gender" value="male">
+            <label for="male" class="label-one">Male</label>
+            <input id="female" type="radio" name="gender" value="female">
+            <label for="female" class="label-one">Female</label>
+        </div>
+        <h4>Buttons</h4>
+        <div class="btn-group">
+            <button class="active">Active</button>
+            <button class="hover">Hover</button>
+            <button class="danger">Danger</button>
+            <button class="danger-hover">Hover</button>
+            <button class="disabled">Disabaled</button>
+            <button class="circle">+</button>
+            <button class="circle-minus">-</button>
+        </div>
+        <h4>Text area</h4>
+        <textarea rows="10" cols="45" name="text" placeholder="Enter some text..."></textarea>
     </body>
 </html>
